<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewGroupActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:text="@string/btn_one"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#ff99ee"
        android:layout_toEndOf="@+id/btnOne"
        android:text="@string/btn_two"
        android:textColor="#fff"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/teal_200"
        android:layout_toEndOf="@+id/btnTwo"
        android:text="@string/btn_three"
        android:textColor="#fff"/>
    
    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/btnThree">
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="#03A9F4"
            android:layout_weight="2"
            android:text="@string/linear_one"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@color/black"
            android:textColor="#fff"
            android:layout_weight="1"
            android:text="@string/linear_two"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="#FFEB3B"
            android:layout_weight="1"
            android:text="@string/linear_three"/>
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/rlProfileItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout1"
        android:padding="20dp">
        
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/opm_snaps"
            android:contentDescription="@string/profile_image"/>

        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgProfile"
            android:orientation="vertical"
            android:paddingStart="20dp">
            
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/zack_leones"
                android:textColor="#000"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/junior_android_developer"
                android:textColor="#272727"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/Company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/company"
                android:textColor="#9e9e9e"
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/rlProfileItem">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/camel_case_snake_case_pascal_case"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/case_coding"
            android:layout_gravity="bottom"
            android:background="#7C393939"
            android:textColor="#fff"/>

    </FrameLayout>
</RelativeLayout>